arm: laguna: Enable uboot environment

--- a/configs/lua-qemu_defconfig
+++ b/configs/lua-qemu_defconfig
@@ -192,6 +192,10 @@ CONFIG_PARTITION_TYPE_GUID=y
 CONFIG_SPL_OF_CONTROL=y
 CONFIG_OF_BOARD=y
 CONFIG_OF_SPL_REMOVE_PROPS="pinctrl-0 pinctrl-names clocks clock-names interrupt-parent interrupts"
+# CONFIG_ENV_IS_NOWHERE is not set
+CONFIG_ENV_IS_IN_BLK=y
+CONFIG_SYS_REDUNDAND_ENVIRONMENT=y
+CONFIG_SPL_ENV_IS_NOWHERE=y
 CONFIG_NET_RETRY_COUNT=20
 CONFIG_NET_RANDOM_ETHADDR=y
 CONFIG_KEEP_SERVERADDR=y
