arm: laguna: Add abort alarm driver
Change-Id: Ib2a9c1eefef74fd6dcea2f976ed391c813544283
Reviewed-on: https://gerrit.aixin-chip.com/c/uboot/+/117094
Tested-by: jenkins <jenkins@axera-tech.com>
Reviewed-by: 义冬 黄 <huangyidong@axera-tech.com>
Reviewed-by: 逾 沈 <shenyu@axera-tech.com>

--- a/arch/arm/dts/laguna-global-ctrl.dtsi
+++ b/arch/arm/dts/laguna-global-ctrl.dtsi
@@ -78,9 +78,19 @@
 		top_glb: top-glb@18008000 {
 			compatible = "syscon", "simple-mfd";
 			reg = <0x00 0x18008000 0x00 0x1000>;
+			u-boot,dm-pre-reloc;
+			u-boot,dm-spl;
 			#address-cells = <1>;
 			#size-cells = <1>;
 			status = "disabled";
+
+			abort_alarm: abort_alarm {
+				compatible = "axera,laguna-abort-alarm";
+				regmap = <&top_glb>;
+				offset = <LAGUNA_SYSCON_TOP_ABORT_ALARM>;
+				u-boot,dm-pre-reloc;
+				u-boot,dm-spl;
+			};
 		};
 	};
 };
