--- a/configs/lua-qemu_defconfig
+++ b/configs/lua-qemu_defconfig
@@ -40,6 +40,7 @@ CONFIG_LUA_FDT_LOAD_NAME="laguna-qemu-virt.dtb"
 CONFIG_LUA_RAMDISK_LOAD_NAME="rootfs.cpio.lz4"
 CONFIG_LUA_MTDPARTS_READ=y
 CONFIG_LUA_AB=y
+CONFIG_LUA_BOOTPARAMS_VERIFY=y
 CONFIG_LUA_CUSTOM_SERVERIP=y
 CONFIG_SPL_LUA_CPU_CACHE=y
 CONFIG_SYS_LOAD_ADDR=0x102000000
