--- a/configs/lua-qemu_defconfig
+++ b/configs/lua-qemu_defconfig
@@ -279,6 +279,7 @@ CONFIG_FDL_UART=y
 CONFIG_FDL_USB=y
 CONFIG_FDL_DEBUG=y
 CONFIG_FDL_USB_DRV=y
+CONFIG_ABORT_ALARM=y
 CONFIG_SPI=y
 CONFIG_DM_SPI=y
 CONFIG_DESIGNWARE_SPI=y
