--- a/arch/arm/mach-axera/laguna/Makefile
+++ b/arch/arm/mach-axera/laguna/Makefile
@@ -6,6 +6,8 @@
 obj-y += common.o lowlevel.o memmap.o
 oby-y += soc_init.o
 
+CFLAGS_common.o := $(if $(BUILD_DATE),-DBUILD_DATE='"$(BUILD_DATE)"')
+
 ifdef CONFIG_SPL_BUILD
 obj-y += spl.o
 else
