--- a/configs/lua-qemu_defconfig
+++ b/configs/lua-qemu_defconfig
@@ -278,6 +278,8 @@ CONFIG_SOC_LAGUNA=y
 CONFIG_DM_GLBCON=y
 CONFIG_FDL_UART=y
 CONFIG_FDL_USB=y
+CONFIG_FDL_SDCARD=y
+CONFIG_FDL_SHA1SUM=y
 CONFIG_FDL_DEBUG=y
 CONFIG_FDL_USB_DRV=y
 CONFIG_ABORT_ALARM=y
@@ -303,6 +305,7 @@ CONFIG_VIRTIO_MMIO=y
 CONFIG_VIRTIO_PCI=y
 CONFIG_VIRTIO_NET=y
 CONFIG_VIRTIO_BLK=y
+CONFIG_FAT_WRITE=y
 CONFIG_CC_OPTIMIZE_LIBS_FOR_SPEED=y
 # CONFIG_SPL_USE_TINY_PRINTF is not set
 CONFIG_SPL_TINY_MEMSET=y
