--- a/configs/lua-qemu_defconfig
+++ b/configs/lua-qemu_defconfig
@@ -7,16 +7,18 @@ CONFIG_USE_ARCH_MEMSET=y
 # CONFIG_ARM64_SUPPORT_AARCH32 is not set
 CONFIG_ARCH_AXERA=y
 CONFIG_SYS_TEXT_BASE=0x100200000
+CONFIG_SYS_MALLOC_F_LEN=0x8000
 CONFIG_SPL_GPIO=y
 CONFIG_SPL_LIBCOMMON_SUPPORT=y
 CONFIG_SPL_LIBGENERIC_SUPPORT=y
 CONFIG_DM_GPIO=y
 CONFIG_SPL_DM_SPI=y
 CONFIG_DEFAULT_DEVICE_TREE="laguna-qemu"
-CONFIG_SPL_TEXT_BASE=0x14000000
+CONFIG_SPL_TEXT_BASE=0x14001000
 CONFIG_SYS_PROMPT="LUA$ "
 CONFIG_SPL_SERIAL=y
 CONFIG_BOOTCOUNT_BOOTLIMIT=3
+CONFIG_SPL_SYS_MALLOC_F_LEN=0x4000
 CONFIG_SPL_SIZE_LIMIT=0x200000
 CONFIG_SPL_SIZE_LIMIT_PROVIDE_STACK=0x10000
 CONFIG_DEBUG_UART_BASE=0x0E403000
@@ -39,8 +41,8 @@ CONFIG_LUA_OPTEE_SUPPORT=y
 CONFIG_LUA_FDT_LOAD_NAME="laguna-qemu-virt.dtb"
 CONFIG_LUA_RAMDISK_LOAD_NAME="rootfs.cpio.lz4"
 CONFIG_LUA_MTDPARTS_READ=y
+CONFIG_LUA_MTDPARTS_FROM_MTDBLOCK=y
 CONFIG_LUA_AB=y
-CONFIG_LUA_BOOTPARAMS_VERIFY=y
 CONFIG_LUA_CUSTOM_SERVERIP=y
 CONFIG_SPL_LUA_CPU_CACHE=y
 CONFIG_SYS_LOAD_ADDR=0x102000000
@@ -241,6 +243,7 @@ CONFIG_SYS_MTDPARTS_RUNTIME=y
 CONFIG_MTD_RAW_NAND=y
 CONFIG_MTD_SPI_NAND=y
 CONFIG_DM_SPI_FLASH=y
+# CONFIG_SPI_FLASH_PROBE_ALL is not set
 CONFIG_SPI_FLASH_STMICRO=y
 CONFIG_SPI_FLASH_MT35XU=y
 CONFIG_SPI_FLASH_SST=y
