--- a/drivers/soc/axera/Makefile
+++ b/drivers/soc/axera/Makefile
@@ -4,3 +4,4 @@ obj-$(CONFIG_$(SPL_)DM_GLBCON) += glbcon.o
 obj-$(CONFIG_$(SPL_)FDL) += fdl/
 obj-$(CONFIG_$(SPL_)FDL_USB_DRV) += usb/
 obj-$(CONFIG_$(SPL_TPL_)ABORT_ALARM) += abort-alarm.o
+obj-$(CONFIG_$(SPL_)ABC_SYSCON) += abc_syscon.o
