--- a/configs/lua-qemu_defconfig
+++ b/configs/lua-qemu_defconfig
@@ -17,6 +17,7 @@ CONFIG_DEFAULT_DEVICE_TREE="laguna-qemu"
 CONFIG_SPL_TEXT_BASE=0x14001000
 CONFIG_SYS_PROMPT="LUA$ "
 CONFIG_SPL_SERIAL=y
+CONFIG_SPL_DRIVERS_MISC=y
 CONFIG_BOOTCOUNT_BOOTLIMIT=3
 CONFIG_SPL_SYS_MALLOC_F_LEN=0x4000
 CONFIG_SPL_SIZE_LIMIT=0x200000
@@ -43,6 +44,7 @@ CONFIG_LUA_RAMDISK_LOAD_NAME="rootfs.cpio.lz4"
 CONFIG_LUA_MTDPARTS_READ=y
 CONFIG_LUA_MTDPARTS_FROM_MTDBLOCK=y
 CONFIG_LUA_AB=y
+# CONFIG_LUA_MCU_SLOT_FROM_BUFFER is not set
 CONFIG_LUA_CUSTOM_SERVERIP=y
 CONFIG_SPL_LUA_CPU_CACHE=y
 CONFIG_SYS_LOAD_ADDR=0x102000000
@@ -76,6 +78,7 @@ CONFIG_AVB_VERIFY=y
 CONFIG_AVB_BUF_ADDR=0x90000000
 CONFIG_AVB_BUF_SIZE=0x100000
 CONFIG_STACKPROTECTOR=y
+CONFIG_BOOTLOADER_MESSAGE_AB_REDUNDANT=y
 CONFIG_SPL_FRAMEWORK_BOARD_INIT_F=y
 CONFIG_SPL_SIZE_LIMIT_SUBTRACT_GD=y
 CONFIG_SPL_SIZE_LIMIT_SUBTRACT_MALLOC=y
@@ -285,6 +288,9 @@ CONFIG_FDL_SHA1SUM=y
 CONFIG_FDL_DEBUG=y
 CONFIG_FDL_USB_DRV=y
 CONFIG_ABORT_ALARM=y
+CONFIG_SPL_ABORT_ALARM=y
+CONFIG_ABC_SYSCON=y
+CONFIG_SPL_ABC_SYSCON=y
 CONFIG_SPI=y
 CONFIG_DM_SPI=y
 CONFIG_DESIGNWARE_SPI=y
