--- a/configs/lua-qemu_defconfig
+++ b/configs/lua-qemu_defconfig
@@ -1,6 +1,7 @@
 CONFIG_ARM=y
 CONFIG_POSITION_INDEPENDENT=y
 CONFIG_SYS_INIT_SP_BSS_OFFSET=409600
+CONFIG_ARM_SMCCC=y
 CONFIG_SEMIHOSTING=y
 CONFIG_USE_ARCH_MEMCPY=y
 CONFIG_USE_ARCH_MEMSET=y
@@ -27,6 +28,7 @@ CONFIG_DEBUG_UART_CLOCK=192000000
 CONFIG_SPL_SPI_FLASH_SUPPORT=y
 CONFIG_SPL_SPI=y
 CONFIG_ARMV8_SPL_EXCEPTION_VECTORS=y
+# CONFIG_PSCI_RESET is not set
 CONFIG_AXERA_LUA=y
 CONFIG_TARGET_LUA_VIRT=y
 CONFIG_LUA_PERIPH_CRU=y
@@ -300,6 +302,7 @@ CONFIG_SPL_SYSINFO=y
 CONFIG_SYSINFO_SYSCON=y
 CONFIG_SYSRESET=y
 CONFIG_SPL_SYSRESET=y
+# CONFIG_SYSRESET_CMD_RESET is not set
 CONFIG_SYSRESET_SYSCON=y
 CONFIG_USB=y
 # CONFIG_SPL_DM_USB is not set
