arm: laguna: Use bootargs

--- a/configs/lua-qemu_defconfig
+++ b/configs/lua-qemu_defconfig
@@ -63,6 +63,9 @@ CONFIG_LEGACY_IMAGE_FORMAT=y
 CONFIG_SUPPORT_RAW_INITRD=y
 CONFIG_OF_BOARD_SETUP=y
 CONFIG_OF_SYSTEM_SETUP=y
+CONFIG_USE_BOOTARGS=y
+CONFIG_BOOTARGS="console=${console} root=${root} loglevel=${loglevel} rootfstype=${rootfstype}"
+CONFIG_BOOTARGS_SUBST=y
 CONFIG_USE_BOOTCOMMAND=y
 CONFIG_BOOTCOMMAND="run distro_bootcmd"
 CONFIG_CONSOLE_RECORD=y
